# Time-to-event

./: README.md  churned_customers.csv  pyproject.toml
scripts/: agent.py  churned_customers.json  t.py  time_to_event.py
