[project]
name = "survival"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.6.3",
    "aiofiles>=24.1.0",
    "distfit>=1.8.7",
    "duckdb>=1.3.1",
    "fastembed>=0.7.1",
    "google-genai>=1.21.1",
    "ipykernel>=6.29.5",
    "lifelines>=0.30.0",
    "openai>=1.90.0",
    "pandas>=2.3.0",
    "plotly-express>=0.4.1",
    "qdrant-client>=1.14.3",
    "ucimlrepo>=0.0.7",
]
